[package]
name = "hyprdrop"
version = "0.2.0"
edition = "2021"
authors = ["Johann", "banguard@pm.me"]
description = "Dropdown creator for Hyprland, facilitating the toggling of a terminal emulator across various workspaces for seamless access and organization."
repository = "https://github.com/kjlo/hyprdrop"
readme = "README.md"
license-file = "LICENSE"
keywords = ["hyprland", "dropdown", "terminal", "workspaces"]
categories = ["command-line-utilities"]

[dependencies]
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git", tag = "0.4.0-alpha.3" }
log = "0.4.20"
time = "0.3.32"
simple_logger = "4.3.3"
structopt = "0.3.26"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
